--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -5,34 +5,45 @@ on : [ push ]
 
 jobs :
 
-  fast :
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_PASSWORD: postgres
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-        ports:
-          # Maps TCP port 5432 in the service container to a randomly chosen available port on the host.
-          - 5432
-      postgres2:
-        image: postgres
-        env:
-          POSTGRES_PASSWORD: postgres
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 10
-        ports:
-          # Maps TCP port 5432 in the service container to a randomly chosen available port on the host.
-          - 5433
+  # fast :
+  #   services:
+  #     postgres:
+  #       image: postgres
+  #       env:
+  #         POSTGRES_PASSWORD: postgres
+  #       options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+  #       ports:
+  #         # Maps TCP port 5432 in the service container to a randomly chosen available port on the host.
+  #         - 5432
+  #     postgres2:
+  #       image: postgres
+  #       env:
+  #         POSTGRES_PASSWORD: postgres
+  #       options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 10
+  #       ports:
+  #         # Maps TCP port 5432 in the service container to a randomly chosen available port on the host.
+  #         - 5433
+  #
+  #   runs-on : ubuntu-latest
+  #   steps :
+  #     - run: echo ${{ job.id }}
+  #     - run: echo "${{ toJson( job ) }}"
+  #     - name: get id
+  #       id : id
+  #       run: |
+  #         id=$(/usr/bin/docker ps --all --filter status=running --no-trunc --format "{{.ID}}")
+  #         echo its id $id
+  #         echo "::set-output name=id::$id"
+  #     - run: echo "${{ toJson( steps.id ) }}"
+  #     - run: /usr/bin/docker inspect ${{ steps.id.outputs.id }}
 
+  fast:
     runs-on : ubuntu-latest
     steps :
-      - run: echo ${{ job.id }}
-      - run: echo "${{ toJson( job ) }}"
-      - name: get id
-        id : id
-        run: |
-          id=$(/usr/bin/docker ps --all --filter status=running --no-trunc --format "{{.ID}}")
-          echo its id $id
-          echo "::set-output name=id::$id"
-      - run: echo "${{ toJson( steps.id ) }}"
-      - run: /usr/bin/docker inspect ${{ steps.id.outputs.id }}
+      - run: echo ${{ 12.9.1 > 14.x }}
+      - run: echo ${{ 14.x > 16.x }}
+      - run: echo ${{ 16.x > 18.x }}
+      - run: echo ${{ 12.9.1 < 14.x }}
+      - run: echo ${{ 14.x < 16.x }}
+      - run: echo ${{ 16.x < 18.x }}
+
