--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -43,12 +43,19 @@ jobs :
         modules :
           - module1
           - module2
+    outputs:
+      result: ${{ steps.result.outputs.result }}
     runs-on : ubuntu-latest
     steps :
-      # - name : Conditional
-      #   if: ${{ matrix.modules == 'module1' }}
-      #   run: echo module1
-      - uses : actions/checkout@v2
-      - run : gh pr view 45 --json id --jq .id
-        env:
-            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - if: ${{ matrix.modules == 'module1' }}
+        id: result
+        run: echo "::set-output name=result::module1"
+      - if: ${{ matrix.modules == 'module2' }}
+        id: result
+        run: echo "::set-output name=result::module2"
+
+  second:
+    needs: fast
+    runs-on: ubuntu-latest
+    steps:
+      - echo ${{ toJson( needs.fast.outputs ) }}
